fix: css broken sidebar on small screen
If the screen was too small the footer was overlaying the menu.
With this fix the footer is hidden together with the rnafusion
logo.

--- a/fusion_report/templates/assets/css/main.css
+++ b/fusion_report/templates/assets/css/main.css
@@ -62,6 +62,18 @@ body {
   text-transform: uppercase;
 }
 
+@media screen and (max-height: 375px) {
+  .footer {
+    display: none;
+  }
+}
+
+@media screen and (max-height: 490px) {
+  .footer img{
+    display: none;
+  }
+}
+
 .footer {
   text-align: center;
   position: absolute;
